feat: Implement schema nest cli for upload
